# TaskTracker

./: CMakeLists.txt  CMakePresets.json  README.md  Task.cpp  TaskTracker.cpp  TaskTracker.h  TaskTracker.sln  TaskTracker.vcxproj  TaskTracker.vcxproj.filters  UserInterface.cpp  UserInterface.h  main.cpp
src/: main.cpp
src/Task/: Task.cpp  Task.h
src/TaskTracker/: TaskTracker.cpp  TaskTracker.h
src/UserInterface/: UserInterface.cpp  UserInterface.h
src/Utility/: Utils.cpp  Utils.h
